<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:background="#262528"
    tools:context=".FormCadastro">

    <TextView
        style="@style/Text_View_Title_Page"
        android:id="@+id/tvTitlePage"
        android:text="@string/text_title_page_register"
        />

    <TextView
        style="@style/Text_View_Sub_Title_Page"
        android:id="@+id/tvSubTitlePage"
        android:layout_below="@+id/tvTitlePage"
        android:text="@string/text_sub_title_page_register"
        />

    <TextView
        style="@style/Text_View_Input_Denomination"
        android:id="@+id/tvCampUsuario"
        android:layout_below="@+id/tvSubTitlePage"
        android:text="@string/title_input_user"
        android:layout_marginTop="30dp"
        />

    <EditText
        style="@style/Edit_Text_label"
        android:id="@+id/etCampUsuario"
        android:layout_below="@+id/tvCampUsuario"
        android:inputType="textPersonName"
        />

    <TextView
        style="@style/Text_View_Input_Denomination"
        android:id="@+id/tvCampCelular"
        android:layout_below="@+id/etCampUsuario"
        android:text="@string/title_input_cell_phone"
        />

    <EditText
        style="@style/Edit_Text_label"
        android:id="@+id/etCampCelular"
        android:layout_below="@+id/tvCampCelular"
        android:inputType="phone"
        />

    <TextView
        style="@style/Text_View_Input_Denomination"
        android:id="@+id/tvCampEmail"
        android:layout_below="@+id/etCampCelular"
        android:text="@string/title_input_email"
        />

    <EditText
        style="@style/Edit_Text_label"
        android:id="@+id/etCampEmail"
        android:layout_below="@+id/tvCampEmail"
        android:inputType="textEmailAddress"
        />

    <TextView
        style="@style/Text_View_Input_Denomination"
        android:id="@+id/tvCampSenha"
        android:layout_below="@+id/etCampEmail"
        android:text="@string/title_input_password"
        />

    <EditText
        style="@style/Edit_Text_label"
        android:id="@+id/etCampSenha"
        android:drawableRight="@drawable/ic_eye"
        android:layout_below="@+id/tvCampSenha"
        android:inputType="textPassword"
        />
    <TextView
        style="@style/Text_View_Input_Denomination"
        android:id="@+id/tvCampConfgSenha"
        android:layout_below="@+id/etCampSenha"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/title_input_confirm_password"
        />

    <EditText
        style="@style/Edit_Text_label"
        android:id="@+id/etCampConfigSenha"
        android:drawableRight="@drawable/ic_eye"
        android:layout_below="@+id/tvCampConfgSenha"
        android:inputType="textPassword"
        />

    <RadioGroup
        style="@style/Radio_Grup_Cotainer"
        android:id="@+id/rgContainer"
        android:checkedButton="@id/rbContratante"
        android:layout_below="@+id/etCampConfigSenha">

        <RadioButton
            style="@style/Radio_Button"
            android:id="@+id/rbContratante"
            android:text="@string/radio_button_contractor"/>

        <RadioButton
            style="@style/Radio_Button"
            android:id="@+id/rbFreelancer"
            android:text="@string/radio_button_freelancer"/>
    </RadioGroup>

<!--    <Button-->
<!--        style="@style/Button_Light"-->
<!--        android:text="Descubra mais sobre nós"-->
<!--        />-->
    <Button
        android:id="@+id/btnCriarConta"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:onClick="cadastrar"
        style="@style/Button_Dark"
        android:layout_below="@+id/rgContainer"
        android:text="@string/button_create_an_account"
        />


    <TextView
        style="@style/Text_View_Input_Denomination"
        android:id="@+id/pergunta"
        android:text="@string/text_question_leading_to_login"
        android:gravity="center"
        android:layout_below="@id/btnCriarConta"
        android:onClick="irParaLogin"
        />


</RelativeLayout>

</android.support.v4.widget.NestedScrollView>