<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:background="@color/fundo_nexum"
    tools:context=".HomeFreelancer">

    <ImageView
        style="@style/MyImageViewStyleBottonSair"/>

    <ImageView
        android:id="@+id/LogoFooter"
        style="@style/MyImageViewStyleLogoFooter"
        />

    <TextView
        style="@style/Text_View_Greetings_Home_Page"
        android:id="@+id/tvSubTitlePage"
        android:layout_below="@+id/LogoFooter"

        />

    <ScrollView
        style="@style/Scroll_Bar"
        android:layout_below="@+id/tvSubTitlePage">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/Text_View_Functionalities"
                android:id="@+id/tvProspostas"
                android:text="@string/text_click_here_to_view_proposals_contractor"
                />

            <TextView
                style="@style/Text_View_Functionalities"
                android:id="@+id/tvContato"
                android:layout_below="@+id/tvProspostas"
                android:text="@string/text_click_here_to_enter_contact_contractor" />


            <TextView
                style="@style/Text_View_Functionalities"
                android:id="@+id/tvPerfil"
                android:layout_below="@+id/tvContato"
                android:text="@string/text_click_here_to_view_profile_contractor"
                android:layout_marginBottom="30dp"
                />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>